--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
 <interface>
-  <requires lib="gtk+" version="3.20"/>
   <template class="DspyWindow" parent="AdwApplicationWindow">
     <property name="default_width">600</property>
     <property name="default_height">300</property>
@@ -22,10 +20,153 @@
         </child>
       </object>
     </child>
-    <child>
-      <object class="DspyView" id="view">
-        <property name="vexpand">true</property>
+    <property name="content">
+      <object class="GtkStack">
+        <child>
+          <object class="GtkStackPage">
+            <property name="child">
+              <object class="AdwNavigationSplitView">
+                <property name="min-sidebar-width">300</property>
+                <property name="max-sidebar-width">300</property>
+                <property name="sidebar">
+                  <object class="AdwNavigationPage">
+                    <property name="title" translatable="yes">D-Spy</property>
+                    <property name="child">
+                      <object class="AdwToolbarView">
+                        <child type="top">
+                          <object class="AdwHeaderBar">
+                            <child type="end">
+                              <object class="GtkMenuButton">
+                                <property name="icon-name">open-menu-symbolic</property>
+                                <property name="primary">true</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkBox">
+                            <property name="orientation">vertical</property>
+                            <child>
+                              <object class="GtkScrolledWindow">
+                                <property name="hscrollbar-policy">never</property>
+                                <child>
+                                  <object class="GtkListView">
+                                    <style>
+                                      <class name="navigation-sidebar"/>
+                                    </style>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                  </object>
+                </property>
+                <property name="content">
+                  <object class="AdwNavigationPage">
+                    <property name="title"></property>
+                    <property name="child">
+                      <object class="AdwNavigationSplitView">
+                        <property name="min-sidebar-width">300</property>
+                        <property name="max-sidebar-width">300</property>
+                        <property name="sidebar">
+                          <object class="AdwNavigationPage">
+                            <property name="title" translatable="yes">Bus Names</property>
+                            <property name="child">
+                              <object class="AdwToolbarView">
+                                <child type="top">
+                                  <object class="AdwHeaderBar">
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkBox">
+                                    <property name="orientation">vertical</property>
+                                    <child>
+                                      <object class="GtkSearchEntry">
+                                        <property name="placeholder-text" translatable="yes">Filter…</property>
+                                        <property name="margin-bottom">6</property>
+                                        <property name="margin-end">6</property>
+                                        <property name="margin-start">6</property>
+                                        <property name="margin-top">6</property>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </property>
+                          </object>
+                        </property>
+                        <property name="content">
+                          <object class="AdwNavigationPage">
+                            <property name="title"></property>
+                            <property name="child">
+                              <object class="AdwNavigationSplitView">
+                                <property name="min-sidebar-width">300</property>
+                                <property name="max-sidebar-width">300</property>
+                                <property name="sidebar">
+                                  <object class="AdwNavigationPage">
+                                    <property name="title" translatable="yes">Objects</property>
+                                    <property name="child">
+                                      <object class="AdwToolbarView">
+                                        <child type="top">
+                                          <object class="AdwHeaderBar">
+                                          </object>
+                                        </child>
+                                        <child>
+                                          <object class="GtkBox">
+                                            <property name="orientation">vertical</property>
+                                            <child>
+                                              <object class="GtkSearchEntry">
+                                                <property name="placeholder-text" translatable="yes">Filter…</property>
+                                                <property name="margin-bottom">6</property>
+                                                <property name="margin-end">6</property>
+                                                <property name="margin-start">6</property>
+                                                <property name="margin-top">6</property>
+                                              </object>
+                                            </child>
+                                          </object>
+                                        </child>
+                                      </object>
+                                    </property>
+                                  </object>
+                                </property>
+                                <property name="content">
+                                  <object class="AdwNavigationPage">
+                                    <property name="title"></property>
+                                    <property name="child">
+                                      <object class="AdwToolbarView">
+                                        <child type="top">
+                                          <object class="AdwHeaderBar">
+                                          </object>
+                                        </child>
+                                      </object>
+                                    </property>
+                                  </object>
+                                </property>
+                              </object>
+                            </property>
+                          </object>
+                        </property>
+                      </object>
+                    </property>
+                  </object>
+                </property>
+              </object>
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStackPage">
+            <property name="child">
+              <object class="DspyView" id="view">
+                <property name="vexpand">true</property>
+              </object>
+            </property>
+          </object>
+        </child>
       </object>
-    </child>
+    </property>
   </template>
 </interface>
