--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -20,12 +20,28 @@
         </child>
       </object>
     </child>
+    <child>
+      <object class="AdwBreakpoint">
+        <condition>max-width: 719sp</condition>
+        <setter object="split1" property="collapsed">true</setter>
+        <setter object="split2" property="collapsed">true</setter>
+        <setter object="split3" property="collapsed">true</setter>
+      </object>
+    </child>
+    <child>
+      <object class="AdwBreakpoint">
+        <condition>max-width: 1079sp</condition>
+        <setter object="split1" property="collapsed">true</setter>
+        <setter object="split2" property="collapsed">true</setter>
+        <setter object="split3" property="collapsed">false</setter>
+      </object>
+    </child>
     <property name="content">
       <object class="GtkStack">
         <child>
           <object class="GtkStackPage">
             <property name="child">
-              <object class="AdwNavigationSplitView">
+              <object class="AdwNavigationSplitView" id="split1">
                 <property name="min-sidebar-width">300</property>
                 <property name="max-sidebar-width">300</property>
                 <property name="sidebar">
@@ -68,7 +84,7 @@
                   <object class="AdwNavigationPage">
                     <property name="title"></property>
                     <property name="child">
-                      <object class="AdwNavigationSplitView">
+                      <object class="AdwNavigationSplitView" id="split2">
                         <property name="min-sidebar-width">300</property>
                         <property name="max-sidebar-width">300</property>
                         <property name="sidebar">
@@ -102,7 +118,7 @@
                           <object class="AdwNavigationPage">
                             <property name="title"></property>
                             <property name="child">
-                              <object class="AdwNavigationSplitView">
+                              <object class="AdwNavigationSplitView" id="split3">
                                 <property name="min-sidebar-width">300</property>
                                 <property name="max-sidebar-width">300</property>
                                 <property name="sidebar">
