--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -63,14 +63,48 @@
                         <child>
                           <object class="GtkBox">
                             <property name="orientation">vertical</property>
+                            <property name="vexpand">true</property>
                             <child>
                               <object class="GtkScrolledWindow">
                                 <property name="hscrollbar-policy">never</property>
+                                <property name="vexpand">true</property>
                                 <child>
                                   <object class="GtkListView">
                                     <style>
                                       <class name="navigation-sidebar"/>
                                     </style>
+                                    <property name="single-click-activate">true</property>
+                                    <property name="model">
+                                      <object class="GtkNoSelection">
+                                        <binding name="model">
+                                          <lookup name="connections">DspyWindow</lookup>
+                                        </binding>
+                                      </object>
+                                    </property>
+                                    <property name="factory">
+                                      <object class="GtkBuilderListItemFactory">
+                                        <property name="bytes"><![CDATA[
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <template class="GtkListItem">
+    <property name="child">
+      <object class="GtkLabel">
+        <property name="hexpand">true</property>
+        <property name="ellipsize">end</property>
+        <property name="xalign">0</property>
+        <binding name="label">
+          <lookup name="title" type="DspyConnection">
+            <lookup name="item">GtkListItem</lookup>
+          </lookup>
+        </binding>
+      </object>
+    </property>
+  </template>
+</interface>
+]]>
+                                        </property>
+                                      </object>
+                                    </property>
                                   </object>
                                 </child>
                               </object>
