introspectable-row: use binding for title
This allows us to adapt to changes in the title.

--- a/src/dspy-introspectable-row.ui
+++ b/src/dspy-introspectable-row.ui
@@ -6,6 +6,7 @@
         <child>
           <object class="GtkLabel" id="title">
             <property name="xalign">0</property>
+            <property name="use-markup">true</property>
           </object>
         </child>
       </object>
