--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -69,13 +69,12 @@
                                 <property name="hscrollbar-policy">never</property>
                                 <property name="vexpand">true</property>
                                 <child>
-                                  <object class="GtkListView">
+                                  <object class="GtkListView" id="connections_list_view">
                                     <style>
                                       <class name="navigation-sidebar"/>
                                     </style>
-                                    <property name="single-click-activate">true</property>
                                     <property name="model">
-                                      <object class="GtkNoSelection">
+                                      <object class="GtkSingleSelection" id="connections_selection">
                                         <binding name="model">
                                           <lookup name="connections">DspyWindow</lookup>
                                         </binding>
@@ -141,6 +140,53 @@
                                         <property name="margin-end">6</property>
                                         <property name="margin-start">6</property>
                                         <property name="margin-top">6</property>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkScrolledWindow">
+                                        <property name="hscrollbar-policy">never</property>
+                                        <property name="vexpand">true</property>
+                                        <child>
+                                          <object class="GtkListView" id="names_list_view">
+                                            <style>
+                                              <class name="navigation-sidebar"/>
+                                            </style>
+                                            <property name="single-click-activate">true</property>
+                                            <property name="model">
+                                              <object class="GtkSingleSelection" id="names_selection">
+                                                <binding name="model">
+                                                  <lookup name="names" type="DspyConnection">
+                                                    <lookup name="selected-item">connections_selection</lookup>
+                                                  </lookup>
+                                                </binding>
+                                              </object>
+                                            </property>
+                                            <property name="factory">
+                                              <object class="GtkBuilderListItemFactory">
+                                                <property name="bytes"><![CDATA[
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <template class="GtkListItem">
+    <property name="child">
+      <object class="GtkLabel">
+        <property name="hexpand">true</property>
+        <property name="ellipsize">end</property>
+        <property name="xalign">0</property>
+        <binding name="label">
+          <lookup name="name" type="DspyName">
+            <lookup name="item">GtkListItem</lookup>
+          </lookup>
+        </binding>
+      </object>
+    </property>
+  </template>
+</interface>
+]]>
+                                                </property>
+                                              </object>
+                                            </property>
+                                          </object>
+                                        </child>
                                       </object>
                                     </child>
                                   </object>
@@ -218,6 +264,7 @@
             </property>
           </object>
         </child>
+        <!--property name="visible-child-name">old</property-->
       </object>
     </property>
   </template>
