--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,6 @@
-dspyview dzlmultipaned > :first-child {
-  border-right: 1px solid @borders;
+window listview.navigation-sidebar row {
+  margin-bottom: 3px;
 }
-dspyview box.linked.horizontal > scrolledwindow:first-child {
-  border-right: none;
-}
-dspyview .sidebar button.popup.toggle {
-  border: none;
-  border-radius: 0px;
-  background: none;
-  box-shadow: none;
-  padding: 0px 6px;
-}
-dspyview .sidebar button:not(:hover) image {
-  color: alpha(currentColor, 0.6);
-}
-dspyview .methodview {
-  padding: 12px;
+window listview.navigation-sidebar row > * {
+  padding: 6px 3px;
 }
