--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -346,21 +346,31 @@
 <interface>
   <template class="GtkListItem">
     <property name="child">
-      <object class="GtkLabel">
-        <property name="hexpand">true</property>
-        <property name="ellipsize">middle</property>
-        <property name="xalign">0</property>
-        <property name="use-markup">true</property>
-        <binding name="label">
-          <lookup name="title" type="DspyIntrospectable">
-            <lookup name="item">GtkListItem</lookup>
-          </lookup>
-        </binding>
-        <binding name="tooltip-text">
-          <lookup name="title" type="DspyIntrospectable">
-            <lookup name="item">GtkListItem</lookup>
-          </lookup>
-        </binding>
+      <object class="GtkBox">
+        <property name="spacing">6</property>
+        <child>
+          <object class="GtkLabel">
+            <property name="hexpand">true</property>
+            <property name="ellipsize">middle</property>
+            <property name="xalign">0</property>
+            <property name="use-markup">true</property>
+            <binding name="label">
+              <lookup name="title" type="DspyIntrospectable">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
+            </binding>
+            <binding name="tooltip-text">
+              <lookup name="title" type="DspyIntrospectable">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
+            </binding>
+          </object>
+        </child>
+        <child>
+          <object class="GtkImage">
+            <property name="icon-name">go-next-symbolic</property>
+          </object>
+        </child>
       </object>
     </property>
   </template>
